New examples worked in class

--- a/An Example.Rmd
+++ b/An Example.Rmd
@@ -2,8 +2,13 @@
 title: "An example RMarkdown"
 author: "Emily Cordova"
 date: "9/10/2019"
-output: html_document
+output: github_document
 ---
+
+
+
+**This is an R Notebook.** You can use it to take notes and run code. For example, you can write your name on the line below. _Try it_:
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
